# application/account/dto/dto.go
@@ -17,3 +17,19 @@ type FindAccountByIdResponse struct {
 	AccountID      int64  `json:"account_id"`
 	DocumentNumber string `json:"document_number"`
 }
+
+type ListAccountsRequest struct {
+	Limit  int64 `uri:"limit" binding:"required,gt=0"`
+	Cursor int64 `uri:"cursor" binding:"required,gt=0"`
+}
+
+type ListAccountsResponse struct {
+	Accounts []AccountDTO `json:"accounts"`
+	Limit    int64        `uri:"limit" binding:"required,gt=0"`
+	Cursor   int64        `uri:"cursor" binding:"required,gt=0"`
+}
+
+type AccountDTO struct {
+	AccountID      int64  `json:"account_id"`
+	DocumentNumber string `json:"document_number"`
+}
